<resources>
    <string name="app_name">Dranyk</string>
    <string name="place_your_nfc_tag">Place your NFC tag</string>
    <string name="start_scanning">New Delivery</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="patient_name">Patient Name</string>
    <string name="password">password</string>
    <string name="email">email address</string>
    <string name="patient_name_default">John Newcomer</string>
    <string name="destination_default">Fakultní nemocnice Lochotín</string>
</resources>