<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <EditText
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/patient_name"
            android:text="@string/patient_name_default" />
        <Button
            android:id="@+id/package_submit_button"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/submit"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="480dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>